--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App{
     padding: 0px;
     margin: 0px;
-    background-image: linear-gradient(#f39bce, rgb(103, 58, 129));
-    height: 100vh;
+    /* background-image: linear-gradient(#f39bce, rgb(103, 58, 129)); */
+    background-image: url("../public/images/backImage.jpeg");
+    background-size: cover;
+    background-attachment: fixed;
+    height: auto;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,10 +15,15 @@
 .card
 {
     background-color: white;
-    height:80vh;
+    height:auto;
+    min-height: 80%;
     width:90%;
     display: flex;
     flex-direction: row;
+    border-radius: 10px;
+    box-shadow: 0px 2px 7px;
+    padding: 8px;
+    /* border: 1px solid red; */
 }
 
 .appointment{
@@ -28,17 +37,33 @@
 
 .appointimg{
     width: 50%;
-    height: 100%;
+    height: 50vh ;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center; 
-    
+    /* border: 1px solid pink; */
 }
 
-.appointimg div{
-    height: 80%;
+.imgholder{
+    min-height: 80%;
+    height: auto;
     width: 90%;
     background-image: url("../public/images/appointImg.jpg");
     background-size: cover;
+    /* border: 1px solid red ; */
+    position: sticky;
 }
 
+@media only screen and (max-width: 600px) {
+    .card {
+        display:flex;
+        flex-direction: column;
+    }
+
+    .appointment{
+        order: 2;
+    }
+    .appointimg{
+        order: 1;
+    }
+}
