--- a/src/Components/Appointment.css
+++ b/src/Components/Appointment.css
@@ -3,13 +3,14 @@
 .Appointment {
     height: 80%;
     width: 80%;
+    /* border: 1px solid red; */
 }
 
 .box {
-    height: 100%;
+    height: 60%;
     width: 100%;
     padding-left: 30px;
-    padding-top: 30px;
+    /* padding-top: 30px; */
     display: flex;
     flex-direction: column;
     /* border: 1px solid red; */
@@ -21,16 +22,17 @@
 
 .text-required {
     width: 60%;
+    /* border: 1px solid red; */
 }
 
 .button {
     width: 15%;
-    height: 10%;
+    height: 50px;
     margin-top: 20px;
     border-radius: 8px;
     border: 0px;
     color: white;
-    font-size: larger;
+    font-size: medium;
     font-weight: bolder;
     background-color: blueviolet;
 }
@@ -41,4 +43,40 @@
     margin-top: 30px;
     height:5px;
     width:100%;
+}
+
+.expense-filter{
+    color:black;
+    /* background-color: gray; */
+    border: 1px solid rgba(0, 0, 0, 0.226);
+    border-radius: 5px;
+    padding:10px;
+    margin-top: 10px;
+    
+}
+
+
+.expense-filter:hover{
+    border: 1px solid black;
+}
+.expense-filter__control{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.expense-filter__control label{
+    font-size: larger;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+}
+
+.expense-filter__control select{
+    font:inherit;
+    border-radius: 6px;
+    font-weight: bold;
+    padding: 0.5rem 3rem;
+    font-family: 'Roboto', sans-serif;
 }
