--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -1,11 +1,13 @@
 .Card{
-    height:20%;
-    width:30%;
+    height:auto;
+    width:70%;
     border:1px solid rgba(0, 0, 0, 0.479);
     border-radius: 5px;
     display:flex;
     flex-direction: column;
     justify-content: space-around;
+    box-shadow: 0px 0px 2px;
+    margin-top: 5px;
 }
 .card div{
     padding:2px;
